; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_graphdump.c_avfilter_graph_dump.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_graphdump.c_avfilter_graph_dump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@AV_BPRINT_SIZE_COUNT_ONLY = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @avfilter_graph_dump(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_5__, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i64, i64* @AV_BPRINT_SIZE_COUNT_ONLY, align 8
  %8 = call i32 @av_bprint_init(%struct.TYPE_5__* %5, i64 0, i64 %7)
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @avfilter_graph_dump_to_buf(%struct.TYPE_5__* %5, i32* %9)
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = add nsw i64 %12, 1
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %15, 1
  %17 = call i32 @av_bprint_init(%struct.TYPE_5__* %5, i64 %13, i64 %16)
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @avfilter_graph_dump_to_buf(%struct.TYPE_5__* %5, i32* %18)
  %20 = call i32 @av_bprint_finalize(%struct.TYPE_5__* %5, i8** %6)
  %21 = load i8*, i8** %6, align 8
  ret i8* %21
}

declare dso_local i32 @av_bprint_init(%struct.TYPE_5__*, i64, i64) #1

declare dso_local i32 @avfilter_graph_dump_to_buf(%struct.TYPE_5__*, i32*) #1

declare dso_local i32 @av_bprint_finalize(%struct.TYPE_5__*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
